# mcp-servers

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  data.json  docker-compose.yml  mcp-config.json  pyproject.toml  skills_summary.md  start.sh
data/: .auth_token.json  .data_api_token.json  .enhanced_search_token.json  .hydrology_forecast_token.json  .water_forecast_token.json  .xinanjiang_token.json  2021秋汛方案单1002-提胡光亮.xlsx  Flood_Control_Plan.json  Q_Inputsd.xlsx  Q_Inputxd.xlsx  dispatch_scheme_data_base.json  query.json  水库.csv  水库特征水位.json  水库特征水位.xlsx  水文站.csv  雨量站.csv
frontend/: index.html  peer-stream.js
scripts/: convert_excel_to_json.py  generate_seed_sql.py  import_dispatch_data.py  import_flood_plan.py  start.bat
sql/: 01_create_tables.sql  01c_seed_hydrology_weight.sql  02_seed_reservoirs.sql  03_seed_water_levels.sql  04_seed_simulation_params.sql  05_seed_flood_plan.sql  06_seed_dispatch_schemes.sql  07_seed_evacuation_data.sql  07_seed_xinanjiang_config.sql  08_create_rainfall_tables.sql  10_seed_evacuation_routes.sql  11_create_encoding_mapping.sql  12_create_oauth_tables.sql
src/: server.py
storage/: flood_control.db  flood_control.db-shm  flood_control.db-wal
templates/: flood_control.j2  flood_control.md  flood_control_html.j2  reservoir_dispatch.md
test/: clear_and_test.py  clear_three_tables.py  hermes_mcp_call_test.py  hermes_sdk_mcp_test.py  mcp_full_system_test.py  mcp_hermes_test.py  mcp_integration_test.py  mcp_integration_test_report.json  mcp_test_questions.md  mcp_test_report.json  mcp_test_report.md  (+8 more)
(+113 files in other folders)
