[project]
name = "mcp-servers"
version = "0.1.0"
description = "防洪四预 MCP 服务"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.3",
    "mcp>=1.27.0",
    "jinja2>=3.0.0",
    "websocket-client>=1.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "pypinyin>=0.55.0",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]

[project.scripts]
mcp-server = "src.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "templates", "docs"]
